Diseño de google en html

--- a/basicas.html
+++ b/basicas.html
@@ -50,6 +50,31 @@ Lista ordenada <br>
 <br>
 Im%aacute;genes <br>
 <img src="http://assets1.ignimgs.com/thumbs/userUploaded/2015/12/7/36190303oslhgofirstblog-1449525074534_large.jpg" alt="Foto de ejemplo">
-
+<br>
+Tablas en HTML <br>
+<table border >
+	<tr>
+		<th>Encabezado 1</th>
+		<th>Encabezado 2</th>
+		<th>Encabezado 3</th>
+		<th>Encabezado 4</th>
+	</tr>
+	<tr>
+		<td>1ra columna</td>
+		<td>2da columna</td>
+		<td>3ra columna</td>
+		<td>4ta columna</td>
+	</tr>
+	<tr>
+		<td>1ra columna</td>
+		<td>2da columna</td>
+		<td colspan="2" rowspan="2" align="center">3ra columna</td>
+		
+	</tr>
+	<tr>
+		<td>1ra columna</td>
+		<td>2da columna</td>
+	</tr>
+</table>
 </body>
 </html>
