--- a/basicas.html
+++ b/basicas.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="estilo.css">
+	<link rel="C:\Usuario\luisf\Imagenes\LOGO_TEC_PNG_OK.png" type="text/css" href="Logo LOGO_TEC_PNG_OK">
+	<h1>
+		
+	</h1>
 	<title>
+		<h1> Titulo de la aplicacion</h1>
+		Logo empresa
+		<img src="C:\Usuario\luisf\Imagenes\LOGO_TEC_PNG_OK.png" alt="">
 		Primera P&aacute;gina HTML
 	</title>
 </head>
